# -Vaso-del-Alfarero-

./: .gitignore  README.md  RESTAURANT_README.md  pyproject.toml
backend/: auth.py  cancellation.py  config.py  currency.py  database.py  index.js  main.py  models.py  models_inventory.py  norms.py  package.json  payments.py  predictions.py  schemas.py  schemas_inventory.py  seed.py  suppliers.py  waste.py
backend/routers/: alerts_router.py  auth_router.py  currency_router.py  dashboard_router.py  export_router.py  inventory_router.py  menu_router.py  norms_router.py  packages_router.py  predictions_router.py  qr_router.py  recipes_router.py  reservations_router.py  supplier_router.py  tables_router.py  timeslots_router.py  waste_router.py
database/: schema.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CurrencyCalculator.tsx  Layout.tsx  Navbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AdminPanel.tsx  Dashboard.tsx  InventoryManagement.tsx  Landing.tsx  Login.tsx  MenuOrder.tsx  MyReservations.tsx  NormsReference.tsx  OperatingCosts.tsx  PredictionsPanel.tsx  RecipeManagement.tsx  Register.tsx  ReservationFlow.tsx  StaffDashboard.tsx  StaffLogin.tsx  SupplierManagement.tsx  WasteManagement.tsx
